<resources>
    <string name="app_name">MyHomeApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_card_temperature_title">Temperature</string>
    <string name="home_card_humidity_title">Humidity</string>
    <string name="home_card_co2_title" translatable="false">CO2 level</string>
    <string name="home_card_motion_title">Motion</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="value">value</string>
    <string name="a">A</string>
    <string name="device_settings">Device settings</string>
    <string name="all_devices">All devices</string>
    <string name="hardware_1">Hardware 1</string>
    <string name="remove">remove</string>
    <string name="motion_detector">Motion detector</string>
    <string name="humidity">Humidity</string>
    <string name="hardware_2">Hardware 2</string>
    <string name="co2_level">CO2 level</string>
    <string name="add_device"><![CDATA[Add device >]]></string>
    <string name="temperature">Temperature</string>
    <string name="manage_sensors">Manage thresholds</string>
    <string name="sound">Sound</string>
    <string name="remove_device">Remove Device</string>
    <string name="home_card_sound_title">Sound</string>
    <string name="device_name">Device name (Optional)</string>
    <string name="device_id">Device ID</string>
    <string name="history">History</string>
    <string name="save">Save</string>
    <string name="On">ON</string>
    <string name="Off">OFF</string>
    <string name="sign_in">Sign in</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="metric_symbol">°C</string>
    <string name="imperial_symbol">°F</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="system_of_measurement">System of Measurement</string>
</resources>