<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relativeLayoutTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/temperature_bg">

            <TextView
                android:id="@+id/prefix_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/a"
                android:textColor="@color/headerColor" />
        </RelativeLayout>

        <TextView
            android:id="@+id/temperatureTimeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:text="@string/time_stamp"
            android:textColor="@color/headerColor" />

        <TextView
            android:id="@+id/temperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="250dp"
            android:text="@string/value"
            android:textColor="@color/headerColor" />
    </RelativeLayout>

</LinearLayout>